# StarLocalRAG

./: .gitattributes  .gitignore  .gitmodules  .windsurfrules  LFS_USAGE.md  OPTIMIZATION_GUIDE.md  README.md  SPEC.md  StarLocalRAG_release20250709230825.apk  StarLocalRAG_release20250806152017.apk  StarLocalRAG_release20250816192626.apk  StarLocalRAG_release20250817173629.apk  StarLocalRAG_release_20250902205042.apk  StarLocalRAG_release_20250903235123.apk  StarLocalRAG_release_20250911145218.apk  StarLocalRAG_release_20250912170824.apk  StarLocalRAG_release_20250915150817.apk  StarLocalRAG_release_20250916103143.apk  StarLocalRAG_release_20250920162038.apk  StarLocalRAG_release_20250922071327.apk  build.gradle  config_with_line_numbers.txt  gradle.properties  settings.gradle  提示词.txt
.lingma/rules/: project_rule.md
.trae/rules/: project_rules.md
app/: build.gradle  lint-baseline.xml  proguard-rules.pro
app/debug/: output-metadata.json
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: USER_GUIDE.md
app/src/main/cpp/: CMakeLists.txt  stub_library.cpp  tokenizers_jni.cpp
app/src/main/java/com/example/starlocalrag/: ApiUrlAdapter.java  AppConstants.java  BertTokenizer.java  BuildKnowledgeBaseFragment.java  ConfigManager.java  DocumentParser.java  EmbeddingModelHandler.java  EmbeddingModelManager.java  EmbeddingModelUtils.java  FileUtil.java  GPUConfigChecker.java  GPUDiagnosticTool.java  GPUErrorHandler.java  GlobalApplication.java  GlobalStopManager.java  HarmonyOSGPUAdapter.java  HelpFragment.java  JsonDatasetProcessor.java  KnowledgeBaseBuilderService.java  KnowledgeBaseService.java  KnowledgeNoteFragment.java  LangChainTextSplitter.java  LogManager.java  LogViewFragment.java  MainActivity.java  MaliGPUOptimizer.java  ModelDownloadFragment.java  OpenGLESComputeAccelerator.java  ProgressManager.java  RagQaFragment.java  RagQueryManager.java  RecursiveTextSplitter.java  RerankerModelHandler.java  RerankerModelManager.java  SQLiteVectorDatabaseHandler.java  SettingsFragment.java  StateAwareSpinnerAdapter.java  StateDisplayManager.java  TextChunk.java  TextChunkProcessor.java  (+9 more)
app/src/main/java/com/example/starlocalrag/api/: LlmApiAdapter.java  LlmModelFactory.java  LlmModelFactory.java.new  LlmStreamingService.java  LocalLLMLlamaCppHandler.java  LocalLLMOnnxHandler.java  LocalLLMOnnxRuntimeGenAIHandler.java  LocalLlmAdapter.java  LocalLlmHandler.java  ModelParamsReader.java  README.md  RagQueryManager.java  RetrofitClient.java  StreamingApiClient.java  TokenizerInterface.java  TokenizerManager.java
app/src/main/java/com/example/starlocalrag/utils/: ModelFileManager.java
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/layout/: activity_main.xml  activity_main_tabbed.xml  dialog_add_api_url.xml  dialog_model_selection.xml  fragment_build_knowledge_base.xml  fragment_help.xml  fragment_knowledge_note.xml  fragment_log_view.xml  fragment_model_download.xml  fragment_rag_qa.xml  fragment_settings.xml  item_api_url.xml
app/src/main/res/menu/: bottom_nav_menu.xml  log_view_menu.xml  main_menu.xml  model_download_menu.xml  settings_menu.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
libs/llamacpp-jni/: VULKAN_CMAKE_HANDLING.md  build.gradle  proguard-rules.pro
libs/llamacpp-jni/src/main/: Application.mk
libs/llamacpp-jni/src/main/cpp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ZERO_CHECK.vcxproj.filters  build-info.cpp  cmake_install.cmake  ggml-backend-opencl-stub.cpp  ggml-vulkan.cpp  ggml-vulkan.patch  llama_inference.cpp  llamacpp_jni.sln  llamacpp_jni.vcxproj.filters  vulkan_runtime_detector.cpp  vulkan_runtime_detector.h  vulkan_symbol_keeper.cpp  vulkan_version_patch.h
libs/llamacpp-jni/src/main/java/com/starlocalrag/llamacpp/: LlamaCpp.java  LlamaCppEmbedding.java  LlamaCppInference.java  NativeLibraryLoader.java
libs/tokenizers-ffi/: Cargo.toml  build-android.bat  build-android.sh  stub_lib.c
libs/tokenizers-ffi/.cargo/: config.toml
libs/tokenizers-ffi/src/: lib.rs
libs/tokenizers-jni/: build.gradle  consumer-rules.pro  proguard-rules.pro
libs/tokenizers-jni/src/main/cpp/: tokenizers_jni.cpp
libs/tokenizers-jni/src/main/java/com/starlocalrag/tokenizers/: HuggingfaceTokenizer.java  Model.java  NativeLibraryLoader.java  TokenizerComponent.java  TokenizerJNI.java  UnicodeDecoder.java
libs/tokenizers-jni/src/main/rust/: Cargo.toml
libs/tokenizers-jni/src/main/rust/src/: lib.rs
localrag/: README.md  android_tokenizer.py  clean_onnx_model.py  clean_onnx_model_simple.py  compare_embeddings.py  convert_model_to_onnx.py  debug_android_similarity.py  debug_android_vectors.py  fix_gemma_config.py  fix_model_config.py  gemma_model_test.py  knowledge_note_page.py  localrag_app.py  model_conversion_hub.py  model_conversion_page.py  model_diagnostic.py  model_report.json  model_test_samples.txt  model_verification_report.json  pc_vector.json  sqlite_vectorstore.py  test_onnx.py  test_onnx_embedding.py  test_single_onnx.py  tokenizer_config.json  verify_onnx_embedding.py  verify_onnx_model.py  提示词.txt
